--- a/pm2-gui.ini
+++ b/pm2-gui.ini
@@ -3,27 +3,21 @@
 ;
 pm2 = ~/.pm2
 ;
-; The monitor will fetch system CPU/Memory amount after this certain time interval.
-; it could be milliseconds or various time formats(https://github.com/zeit/ms)
+; The interval between communications of Monitor.
 ;
-refresh = 5s
+refresh = 5000
 ;
 ; Port of Web server and socket agent.
 ;
 port = 8088
 ;
-; A value indicates whether or not run the pm2-gui as damonization.
+; A value indicates whether or not run the pm2-gui damonized.
 ;
-daemonize = false
+daemonize = true
 ;
 ; A value indicates whether or not the action buttons (i.e. `restart`, `stop all`...) should be displayed on web page.
 ;
 readonly = false
-;
-; The monitor will fetch process CPU/Memory amount after this certain time interval.
-; it could be milliseconds or various time formats(https://github.com/zeit/ms)
-;
-process_refresh = 3s
 
 [log]
 ;
@@ -41,7 +35,7 @@ date = false
 ;
 ; Log level, one of debug, log, info, warn, error.
 ;
-level = info
+level = warn
 ;
 ; Socket.io origins check, e.g.:
 ;   origins = 'example.com:* http://example.com:* http://www.example.com:8088'
@@ -52,7 +46,7 @@ level = info
 ;
 ; This authorization will be used to authorize socket / web connections if it's set.
 ;
-;authorization = AuTh
+authorization = AuTh
 ;
 ; A value indicates whether agent offline or not.
 ;
