new tiny things

--- a/pm2-gui.ini
+++ b/pm2-gui.ini
@@ -5,7 +5,7 @@ pm2 = ~/.pm2
 ;
 ; The interval between communications of Monitor.
 ;
-refresh = 5000
+refresh = 3000
 ;
 ; Port of Web server and socket agent.
 ;
@@ -13,7 +13,7 @@ port = 8088
 ;
 ; A value indicates whether or not run the pm2-gui damonized.
 ;
-daemonize = true
+daemonize = false
 ;
 ; A value indicates whether or not the action buttons (i.e. `restart`, `stop all`...) should be displayed on web page.
 ;
@@ -31,7 +31,7 @@ prefix = true
 ;
 ; A value indicates whether or not display the local date string before log message.
 ;
-date = false
+date = true
 ;
 ; Log level, one of debug, log, info, warn, error.
 ;
@@ -60,3 +60,38 @@ authorization = AuTh
 ; pm2@172 = 192.168.1.172:9001
 ; pm2@173 = 192.168.1.173:9000
 ;
+;
+; Connecting a https connection (if the https fail, you will be connected by normal http port)
+[https]
+;
+; HTTPS Port
+;
+; port = 8443
+;
+; The key file
+;
+; key = /var/www/file.key
+;
+; The certificate file
+;
+; cert = /var/www/file.crt
+;
+[discord]
+;
+; Use the Discord Auth to access the pm2-gui (Optional)
+;
+; Secret ID
+;
+; id = "0000000000"
+;
+; Client Secret
+;
+; secret = 0000000000
+;
+; Redirect (The redirect page of the website is /discordAuth)
+;
+; redirect = https://example.com.br:8088/discordAuth
+;
+; If the use fail during the Auth, you want redirect the use to a fake redirect?
+;
+; fakeredirect = https://example.com.br
