--- a/package.json
+++ b/package.json
@@ -38,13 +38,16 @@
         "ansi-html": "~0.0.5",
         "async": "~1.5.2",
         "blessed": "^0.1.81",
+        "btoa": "^1.2.1",
         "chalk": "~1.1.3",
         "commander": "~2.9.0",
         "express": "~4.13.4",
         "express-session": "~1.13.0",
+        "frameguard": "^3.0.0",
         "inquirer": "~1.0.2",
         "jade": "~1.11.0",
         "lodash": "~4.12.0",
+        "node-fetch": "^2.3.0",
         "pidusage": "~1.0.1",
         "pm2-axon": "~2.0.11",
         "pm2-axon-rpc": "~0.3.6",
