--- a/pm2-gui.ini
+++ b/pm2-gui.ini
@@ -18,6 +18,10 @@ daemonize = false
 ; A value indicates whether or not the action buttons (i.e. `restart`, `stop all`...) should be displayed on web page.
 ;
 readonly = false
+;
+; Allow file load from the domains
+;
+; allowdomains = https://ajax.cloudflare.com,https://ajax2.cloudflare.com
 
 [log]
 ;
